fixed nav bar overlapping content
set fixed width on nav, flex width on content

--- a/style.css
+++ b/style.css
@@ -27,8 +27,9 @@ header img {
 nav {
     height: auto;
     justify-content: left;
-    min-width: 60px;
-    width: 10%;
+    min-width: 120px;
+    width: 120px; 
+    padding-right: 5px;
 }
 
 main {
@@ -41,7 +42,7 @@ main {
     gap: 10px;
     list-style-type: none;
     margin-top: 10px;
-    min-width: 80px;
+    width: 120px;
     position: fixed;
 }
 
@@ -49,7 +50,8 @@ main {
     background-color: rgba(255, 255, 255, 0.7);
     box-shadow: 5px 5px rgba(0, 0, 0, 0.5);
     display: inline-block;
-    text-align: left;
+    text-align: left; 
+    text-align: center;
 }
 
 .nav__list-item-link {
@@ -132,7 +134,6 @@ hr {
     align-items: center;
     display: flex;
     flex-direction: column;
-
     gap: 10px
 }
 
